src/objects/npo02__Households_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Donated_Since_Date__c</fullName>
        <label>Years Given Since X Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matched_Donor_Role__c</fullName>
        <description>The Role given to the Contacts whose should receive Soft Credit for a Matching Gift.</description>
        <inlineHelpText>The Role given to the Contacts whose should receive Soft Credit for a Matching Gift.</inlineHelpText>
        <label>Matched Donor Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Periods_Rollup__c</fullName>
        <label>Years Given in the Past n Years</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>